objects/sumoapp__Attendee__c.object
<CustomObject>
    <fields>
        <fullName>AnnualHouseholdIncome__c</fullName>
        <formula>sumoapp__ContactRelation__r.AnnualHouseholdIncome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AreaMedianIncome__c</fullName>
        <label>Area Median Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below 30% of AMI</fullName>
                </value>
                <value>
                    <fullName>30 - 49% of AMI</fullName>
                </value>
                <value>
                    <fullName>50 - 79% of AMI</fullName>
                </value>
                <value>
                    <fullName>80 - 100% of AMI</fullName>
                </value>
                <value>
                    <fullName>101% - 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Above 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Chose not to respond</fullName>
                </value>
                <value>
                    <fullName>Above 100% AMI</fullName>
                    <isActive>false</isActive>
                    <label>Above 100% AMI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Status__c</fullName>
        <label>Attendee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attended - Complete</fullName>
                </value>
                <value>
                    <fullName>Attended - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Course Complete</fullName>
                </value>
                <value>
                    <fullName>Course Incomplete</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CertificateNumber__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Certificate Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ChoseNottoProvideIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chose Not to Provide Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientNumber__c</fullName>
        <formula>sumoapp__ContactRelation__r.Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurationinMinutes__c</fullName>
        <formula>TEXT( sumoapp__SumoEvent__r.sumoapp__DurationInMinutes__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration in Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnglishProficiency__c</fullName>
        <label>English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Limited_English_Proficiency_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludeAttendeeFromHUD9902__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Attendee From HUD 9902</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDActivityType__c</fullName>
        <formula>TEXT( sumoapp__SumoEvent__r.HUDActivityType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HUD Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseholdSize__c</fullName>
        <formula>sumoapp__ContactRelation__r.HouseholdSize__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdofAMI__c</fullName>
        <label>Household % Of AMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <label>Mailing Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>MetropolitanStatisticalArea__c</fullName>
        <formula>sumoapp__ContactRelation__r.MetropolitanStatisticalArea__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metropolitan Statistical Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <formula>TEXT( sumoapp__SumoEvent__r.HUD_Purpose__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralSource__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ReferralSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RuralAreaStatus__c</fullName>
        <label>Rural Area Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rural_Area_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidationCombined__c</fullName>
        <formula>IF(
ISPICKVAL(Attendance_Status__c, &apos;&apos;) ||
ISBLANK(sumoapp__ContactRelation__c) ||
ISBLANK(sumoapp__TotalPrice__c) ||
ISPICKVAL(AreaMedianIncome__c, &apos;&apos;) ||
ISPICKVAL(RuralAreaStatus__c, &apos;&apos;) ||
ISPICKVAL(EnglishProficiency__c, &apos;&apos;) ||
ISBLANK(MailingAddress__City__s) ||
ISPICKVAL(MailingAddress__StateCode__s, &apos;&apos;) ||
ISBLANK(MailingAddress__PostalCode__s) ||
ISPICKVAL(Race__c, &apos;&apos;) ||
ISPICKVAL(Ethnicity__c, &apos;&apos;)
,
&apos;Required field(s) missing: &apos; &amp;
IF(ISPICKVAL(Attendance_Status__c, &apos;&apos;), &apos;Attendance Status, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(sumoapp__ContactRelation__c), &apos;Contact Relation, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(sumoapp__TotalPrice__c), &apos;Total Price, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(AreaMedianIncome__c, &apos;&apos;), &apos;Area Median Income, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(RuralAreaStatus__c, &apos;&apos;), &apos;Rural Area Status, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(EnglishProficiency__c, &apos;&apos;), &apos;English Proficiency, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(MailingAddress__City__s), &apos;City, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(MailingAddress__StateCode__s, &apos;&apos;), &apos;State, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(MailingAddress__PostalCode__s), &apos;Postal Code, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(Race__c, &apos;&apos;), &apos;Race, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(Ethnicity__c, &apos;&apos;), &apos;Ethinicity, &apos;, &apos;&apos;)
,
&apos;NO ERROR&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1stTimeHomeBuyer__c</fullName>
        <label>1st Time Home Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X1stTimeHomeBuyer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__CheckInDetails__c</fullName>
        <label>Check-In Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ConfirmationNumber__c</fullName>
        <label>Confirmation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContactRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Relation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Event Attendees</relationshipLabel>
        <relationshipName>ContactEventAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclineReasonOption__c</fullName>
        <label>Decline Reason Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Interested Anymore</fullName>
                </value>
                <value>
                    <fullName>Have a Conflict</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__DeclineReason__c</fullName>
        <label>Decline Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclinedBy__c</fullName>
        <description>Name of internal User that declined the attendee or static string &apos;ATTENDEE&apos; if declined by guest user</description>
        <label>Declined By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__EndDatetime__c</fullName>
        <formula>sumoapp__SumoEvent__r.sumoapp__EndDatetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventName__c</fullName>
        <formula>sumoapp__SumoEvent__r.sumoapp__EventName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ExpirationDate__c</fullName>
        <formula>CASE(sumoapp__Status__c, &apos;DRAFT&apos;, CreatedDate + 65/1440, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsNotArrived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It shows whether the attendee has arrived at the event or not</description>
        <inlineHelpText>Set this value if the attendee did not arrive at the event</inlineHelpText>
        <label>No-Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsPaidInternally__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether the participant has paid for the event online or not</description>
        <label>Is Paid Internally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRegisteredSeats__c</fullName>
        <formula>NOT(ISPICKVAL(sumoapp__Status__c,&apos;CANCELED&apos;))
&amp;&amp; NOT(ISPICKVAL(sumoapp__Status__c,&apos;WAITLISTED&apos;))
&amp;&amp; NOT(ISPICKVAL(sumoapp__Status__c,&apos;DRAFT&apos;))
&amp;&amp; NOT(ISPICKVAL(sumoapp__Status__c,&apos;DECLINED&apos;))
&amp;&amp; NOT(AND(ISPICKVAL(sumoapp__Status__c,&apos;REFUNDED&apos;), sumoapp__IsPaidInternally__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Registered Seats</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LeadRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Relation</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Event Attendees</relationshipLabel>
        <relationshipName>LeadEventAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Location__c</fullName>
        <formula>sumoapp__SumoEvent__r.sumoapp__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__NumberOfCheckIns__c</fullName>
        <inlineHelpText>The # of seats or people checked-in for this event.</inlineHelpText>
        <label># of Check-Ins</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__NumberOfSeats__c</fullName>
        <inlineHelpText>The # of seats or people registered for this event.</inlineHelpText>
        <label># of Seats</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentConnectorId__c</fullName>
        <label>Payment Connector Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__RegistrationLimit__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Registration Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__StartDatetime__c</fullName>
        <formula>sumoapp__SumoEvent__r.sumoapp__StartDatetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CANCELED</fullName>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>COMPLIMENTARY</fullName>
                    <label>Complimentary</label>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>DRAFT</fullName>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>REFUNDED</fullName>
                    <label>Fully Refunded</label>
                </value>
                <value>
                    <fullName>PAID_MANUAL</fullName>
                    <label>Paid - Manual</label>
                </value>
                <value>
                    <fullName>PAID</fullName>
                    <label>Paid - Online</label>
                </value>
                <value>
                    <fullName>PARTIALLY_REFUNDED</fullName>
                    <label>Partially Refunded</label>
                </value>
                <value>
                    <fullName>BOOKED</fullName>
                    <default>true</default>
                    <label>Registered</label>
                </value>
                <value>
                    <fullName>WAITLISTED</fullName>
                    <label>Waitlisted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__SumoEvent__c</fullName>
        <label>SUMO Event</label>
        <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
        <relationshipLabel>Event Attendees</relationshipLabel>
        <relationshipName>EventAttendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sumoapp__SumoUserRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SUMO User Relation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SumoUserEventAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__TicketPrice__c</fullName>
        <label>Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sumoapp__TotalDiscountedPrice__c</fullName>
        <label>Total Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sumoapp__TotalPrice__c</fullName>
        <formula>sumoapp__TicketPrice__c * sumoapp__NumberOfSeats__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SUMO Attendee</label>
    <nameField>
        <displayFormat>ATD-{000000}</displayFormat>
        <label>Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>